device doc query and pagination feature
